@@ -10,6 +10,7 @@ A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
 ........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)
 
 Bug fixes:
+..F....... [ZBX-5636] fixed empty acknowledge block in event details if event has no acknowledges (Vedmak)
 ...G...... [ZBX-5571] fixed reporting of system.sw.packages for multiple package systems (Andris)
 ...G...... [ZBX-5559] fixed reporting of system.sw.packages with short package listing (Andris)
 ..F....... [ZBX-5280] fixed functional macros for newly created items returning 0 instead of 'no data' (Toms)
